--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "dayjs": "^1.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "next": "13.1.1",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
