--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "antd": "^5.1.2",
     "dayjs": "^1.11.7",
     "eslint": "8.30.0",
