--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@next/font": "13.1.1",
     "@tinymce/tinymce-react": "^4.3.0",
     "antd": "^5.1.2",
+    "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "next": "13.1.1",
