--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "dotenv": "^16.0.3"
   }
 }
