--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 ACCESS_TOKEN_KEY=lGVSWkkXf8AMCWs8NxIsFHFjIKBrZzUq
 REFRESH_TOKEN_KEY=some-secret-refresh-token-shit
+API_KEY_EDITOR=6vtz7yc7wtqz403rvcox0gquz2b707uuinaxql67j2ftnlmt
+ROOT_NODE_API=https://blog-nodejs.onrender.com/api/
